<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:weightSum="100"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textSize="22dp"
            android:textStyle="bold"
            android:padding="10dp"/>

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/tryAgain" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="15"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:id="@+id/card_0"
            android:src="@drawable/back"
            android:layout_width="80dp"
            android:layout_height="70dp" />

        <ImageView
            android:id="@+id/card_1"
            android:src="@drawable/back"
            android:layout_width="80dp"
            android:layout_height="70dp" />

        <ImageView
            android:id="@+id/card_2"
            android:src="@drawable/back"
            android:layout_width="80dp"
            android:layout_height="70dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="15"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:id="@+id/card_3"
            android:src="@drawable/back"
            android:layout_width="80dp"
            android:layout_height="70dp" />

        <ImageView
            android:id="@+id/card_4"
            android:src="@drawable/back"
            android:layout_width="80dp"
            android:layout_height="70dp" />

        <ImageView
            android:id="@+id/card_5"
            android:src="@drawable/back"
            android:layout_width="80dp"
            android:layout_height="70dp" />

        <ImageView
            android:id="@+id/card_6"
            android:src="@drawable/back"
            android:layout_width="80dp"
            android:layout_height="70dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="15"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:id="@+id/card_7"
            android:src="@drawable/back"
            android:layout_width="80dp"
            android:layout_height="70dp" />

        <ImageView
            android:id="@+id/card_8"
            android:src="@drawable/back"
            android:layout_width="80dp"
            android:layout_height="70dp" />

        <ImageView
            android:id="@+id/card_9"
            android:src="@drawable/back"
            android:layout_width="80dp"
            android:layout_height="70dp" />

        <ImageView
            android:id="@+id/card_10"
            android:src="@drawable/back"
            android:layout_width="80dp"
            android:layout_height="70dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="15"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:id="@+id/card_11"
            android:src="@drawable/back"
            android:layout_width="80dp"
            android:layout_height="70dp" />

        <ImageView
            android:id="@+id/card_12"
            android:src="@drawable/back"
            android:layout_width="80dp"
            android:layout_height="70dp" />

        <ImageView
            android:id="@+id/card_13"
            android:src="@drawable/back"
            android:layout_width="80dp"
            android:layout_height="70dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_weight="15"
        android:gravity="center"
        android:orientation="horizontal">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newGame"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/endGame"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"/>
    </LinearLayout>



</LinearLayout>